# legacylens

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASING.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: ci.yml
docs/: RULES.md  VALIDATION.md
docs/validation-samples/: carddemo-findings.json  cobol-examples-findings.json
examples/: audit.example.yaml  llm_config.example.yaml
scripts/: build_antlr.py  build_offline_bundle.ps1  build_offline_bundle.sh  install.ps1  install.sh
src/legacylens/: __init__.py  __main__.py  _preflight.py  audit_log.py  bootstrap.py  cli.py  config.py  errors.py  logging_setup.py  store.py
src/legacylens/docs/: __init__.py  generator.py
src/legacylens/graph/: __init__.py  builder.py  emit.py  jcl_links.py  model.py
src/legacylens/ingest/: __init__.py  classify.py  discovery.py  indexer.py
src/legacylens/llm/: __init__.py  airgap.py  base.py  budget.py  cache.py  gateway.py
src/legacylens/parsing/: __init__.py  cache.py  cobol.py  factory.py  jcl.py  model.py  parallel.py  pli.py  serialize.py
src/legacylens/retrieval/: __init__.py  context.py  retriever.py
src/legacylens/security/: __init__.py  analyzer.py  compliance.py  emit.py  model.py  packs.py  rules.py  state.py
tests/: test_cics_sql.py  test_cli.py  test_compliance.py  test_config.py  test_docs.py  test_findings.py  test_graph.py  test_ingest.py  test_llm.py  test_llm_config.py  test_logging.py  test_parallel.py  test_parse_cache.py  test_parser_backend.py  test_parsing.py  test_preflight.py  test_rag.py  test_scale.py  test_security.py
(+16 files in other folders)
