[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legacylens"
version = "0.0.1"
description = "Security- and compliance-first CLI for AI-assisted legacy code analysis"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["legacy", "cobol", "mainframe", "security", "compliance", "audit", "static-analysis"]
authors = [{ name = "legacylens contributors" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# ANTLR COBOL parser backend (opt-in). Runtime only; generating the parser is a
# separate build step (see scripts/build_antlr.py).
antlr = ["antlr4-python3-runtime>=4.13"]

[project.urls]
Homepage = "https://github.com/your-org/legacylens"
Repository = "https://github.com/your-org/legacylens"

[project.scripts]
legacylens = "legacylens.bootstrap:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
